# advent-of-code

./: .gitignore  CMakeLists.txt  main.cpp  register_problems.cpp  register_problems.h
1/: CMakeLists.txt  Problem1.cpp  Problem1.h  Test.cpp
10/: CMakeLists.txt  Problem10.cpp  Problem10.h  Test.cpp
11/: CMakeLists.txt  Problem11.cpp  Problem11.h  Test.cpp
12/: CMakeLists.txt  Problem12.cpp  Problem12.h  Test.cpp
13/: CMakeLists.txt  Problem13.cpp  Problem13.h  Test.cpp
14/: CMakeLists.txt  Problem14.cpp  Problem14.h  Test.cpp
15/: CMakeLists.txt  Problem15.cpp  Problem15.h  Test.cpp
16/: CMakeLists.txt  Problem16.cpp  Problem16.h  Test.cpp
17/: CMakeLists.txt  Problem17.cpp  Problem17.h  Test.cpp
18/: CMakeLists.txt  Problem18.cpp  Problem18.h  Test.cpp
19/: CMakeLists.txt  Problem19.cpp  Problem19.h  Test.cpp
2/: CMakeLists.txt  Problem2.cpp  Problem2.h  Test.cpp
20/: CMakeLists.txt  Problem20.cpp  Problem20.h  Test.cpp
21/: CMakeLists.txt  Problem21.cpp  Problem21.h  Test.cpp
22/: CMakeLists.txt  Problem22.cpp  Problem22.h  Test.cpp
23/: CMakeLists.txt  Problem23.cpp  Problem23.h  Test.cpp
24/: CMakeLists.txt  Problem24.cpp  Problem24.h  Test.cpp
25/: CMakeLists.txt  Problem25.cpp  Problem25.h  Test.cpp
3/: CMakeLists.txt  Problem3.cpp  Problem3.h  Test.cpp
4/: CMakeLists.txt  Problem4.cpp  Problem4.h  Test.cpp
5/: CMakeLists.txt  Problem5.cpp  Problem5.h  Test.cpp
6/: CMakeLists.txt  Problem6.cpp  Problem6.h  Test.cpp
7/: CMakeLists.txt  Problem7.cpp  Problem7.h  Test.cpp
8/: CMakeLists.txt  Problem8.cpp  Problem8.h  Test.cpp
9/: CMakeLists.txt  Problem9.cpp  Problem9.h  Test.cpp
Blank/: CMakeLists.txt  Problem0.cpp  Problem0.h  Test.cpp  create.sh
IProblem/: CMakeLists.txt
(+7 files in other folders)
